[package]
name = "img2xlsx"
version = "0.1.0"
edition = "2021"

[lib]
name = "img2xlsx"
path = "src/img2xlsx.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "img2xlsx-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
image = "0.24.7"
rust_xlsxwriter = { version = "0.54.0", features = ["wasm"] }

js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
web-sys = "0.3.65"
console_error_panic_hook = "0.1.7"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
